# django-admin-kitchen-sink

./: .gitignore  .tmuxp.yaml  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: django_slick_admin  django_slick_admin_login  urls.py  wsgi.py
app/account/: admin.py  models.py
app/account/migrations/: 0001_initial.py
app/charsleft/: widgets.py
app/charsleft_widget/: widgets.py
app/kitchensink/: README.md  __init__.py  admin.py  apps.py  models.py
app/kitchensink/migrations/: 0001_initial.py  0002_auto_20161207_1632.py  0003_auto_20161207_1709.py  0004_auto_20161207_2141.py  0005_auto_20161207_2145.py  0006_applianceservice.py  0007_auto_20161207_2158.py  0008_sink.py  0009_auto_20161207_2214.py  0010_auto_20161207_2217.py  0011_auto_20161207_2227.py
app/project/: dashboard.py  settings.py  urls.py
app/project/templates/admin/: base.html
app/settings/: dashboard.py  development.py
app/toolbox/: __init__.py  admin.py  models.py
app/toolbox/migrations/: 0001_initial.py  0002_auto_20161208_1024.py  0003_auto_20161208_1033.py  0004_auto_20161208_1035.py  0005_auto_20161208_1036.py  0006_auto_20161208_1038.py  0007_auto_20161208_1038.py  0008_auto_20161208_1042.py  0009_auto_20161208_1049.py  0010_auto_20161208_1054.py  0011_auto_20161208_1140.py  0012_auto_20161208_1144.py  0013_auto_20161208_1151.py  0014_auto_20161208_1158.py  0015_auto_20161208_1204.py  0016_auto_20161208_1208.py  0017_auto_20161208_1324.py
app/webpack/: middleware.py
webpack/: common.js  dev.js  prod.js
(+6 files in other folders)
